Created three components

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+.graphHead{
+    display: block;
+    font-size: 16px !important;
+    font-weight: 700;
+    letter-spacing: 0px !important;
+    color: #0f204b;
+    margin-bottom: 5px;
+}
